--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,24 +8,24 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="page__body">
+<body class="page__body desktop-no-index">
   <header class="page-header">
-    <nav class="main-navigation">
-      <div class="main-navigation__wrapper">
-        <a class="main-navigation__logo" href="index.html">
-          <img src="https://via.placeholder.com/33x37" width="33" height="37" alt="Интернет магазин «Кэт энерджи»">
-          <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
-        </a>
-        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      </div>
+    <a class="page-header__logo" href="index.html">
+      <img src="https://via.placeholder.com/33x37" width="33" height="37" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <a class="page-header__logo-second" href="index.html">
+      <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
+    </a>
+    <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+      <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
-        <li class="main-navigation__item">
+        <li class="main-navigation__item desktop-no-index">
           <a class="list__link" href="index.html">Главная</a>
         </li>
-        <li class="main-navigation__item main-navigation__item--current">
+        <li class="main-navigation__item desktop-no-index main-navigation__item--current">
           <a class="list__link">Каталог продукции</a>
         </li>
-        <li class="main-navigation__item">
+        <li class="main-navigation__item desktop-no-index">
           <a class="list__link" href="form.html">Подбор программы</a>
         </li>
       </ul>
@@ -38,22 +38,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 500 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x86" width="68" height="86" alt="Cat energy pro 500 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/68x86" width="68" height="86" alt="Cat energy pro 500 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>500 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">500 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Курица</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Курица</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>700 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -61,22 +61,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 1000 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>1000 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">1000 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Курица</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Курица</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>1000 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">1000 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -84,22 +84,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 500 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy pro 500 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy pro 500 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>500 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">500 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Рыба</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Рыба</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>700 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -107,22 +107,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy pro 1000 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy pro 1000 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>1000 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">1000 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Рыба</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Рыба</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>1000 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">1000 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -130,22 +130,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 500 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy slim 500 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/68x78" width="68" height="78" alt="Cat energy slim 500 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>500 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">500 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Гречка</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Гречка</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>400 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">400 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -153,22 +153,22 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 1000 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy slim 1000 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/84x100" width="84" height="100" alt="Cat energy slim 1000 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>1000 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">1000 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Гречка</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Гречка</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>700 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
@@ -176,34 +176,34 @@
         <li class="catalog__item">
           <a class="catalog-link" href="#">
             <h2 class="catalog-item-title">Cat energy slim 500 г</h2>
-            <p>
-              <img class="catalog-item-image" src="https://via.placeholder.com/72x84" width="72" height="84" alt="Cat energy slim 500 г">
+            <p class="catalog-item-image">
+              <img src="https://via.placeholder.com/72x84" width="72" height="84" alt="Cat energy slim 500 г">
             </p>
           </a>
-          <table class="catalog-item-table">
+          <table class="catalog-item-table text-content">
             <tr class="table-item">
-              <td>Масса</td>
-              <td>500 г</td>
+              <td class="table-cell-one">Масса</td>
+              <td class="table-cell-two">500 г</td>
             </tr>
             <tr class="table-item">
-              <td>Вкус</td>
-              <td>Рис</td>
+              <td class="table-cell-one">Вкус</td>
+              <td class="table-cell-two">Рис</td>
             </tr>
             <tr class="table-item">
-              <td>Цена</td>
-              <td>500 Р.</td>
+              <td class="table-cell-one">Цена</td>
+              <td class="table-cell-two">500 Р.</td>
             </tr>
           </table>
           <button class="catalog-item-button button" type="button">Заказать</button>
         </li>
         <li class="catalog__item plus-item">
           <h2 class="catalog-item-title plus-title">Показать еще 100500 товаров</h2>
-          <p class="plus-text">На самом деле вкусов гораздо больше!</p>
+          <p class="plus-text text-content">На самом деле вкусов гораздо больше!</p>
           <a class="plus-button" href="#">Показать все</a>
         </li>
       </ul>
     </section>
-    <section class="extra">
+    <section class="extra container">
       <h3 class="extra__title">Дополнительные товары</h3>
       <div class="extra__wrapper">
         <ul class="extra__list list">
@@ -211,55 +211,55 @@
             <a class="extra-link" href="#">
               <h4 class="extra-item-title">Сахарозаменитель</h4>
             </a>
-            <span class="extra-item-quantity">1 упаковка (100 г)</span>
-            <span class="extra-item-price">200 Р.</span>
+            <span class="extra-item-quantity text-content">1 упаковка (100 г)</span>
+            <span class="extra-item-price text-content">200 Р.</span>
             <button class="extra-item-button button" type="button">Заказать</button>
           </li>
           <li class="extra-list-item">
             <a class="extra-link" href="#">
               <h4 class="extra-item-title">Питьевая вода</h4>
             </a>
-            <span class="extra-item-quantity">5 литров</span>
-            <span class="extra-item-price">50 Р.</span>
+            <span class="extra-item-quantity text-content">5 литров</span>
+            <span class="extra-item-price text-content">50 Р.</span>
             <button class="extra-item-button button" type="button">Заказать</button>
           </li>
           <li class="extra-list-item">
             <a class="extra-link" href="#">
               <h4 class="extra-item-title">Молоко</h4>
             </a>
-            <span class="extra-item-quantity">1 литр</span>
-            <span class="extra-item-price">100 Р.</span>
+            <span class="extra-item-quantity text-content">1 литр</span>
+            <span class="extra-item-price text-content">100 Р.</span>
             <button class="extra-item-button button" type="button">Заказать</button>
           </li>
           <li class="extra-list-item">
             <a class="extra-link" href="#">
               <h4 class="extra-item-title">Витамины</h4>
             </a>
-            <span class="extra-item-quantity">1 упаковка (30 г)</span>
-            <span class="extra-item-price">300 Р.</span>
+            <span class="extra-item-quantity text-content">1 упаковка (30 г)</span>
+            <span class="extra-item-price text-content">300 Р.</span>
             <button class="extra-item-button button" type="button">Заказать</button>
           </li>
         </ul>
         <div class="extra__gift">
           <h3 class="visually-hidden">Подарок</h3>
-          <p class="gift-text">Закажите все и получите чехол для кота в подарок!</p>
+          <p class="gift-text text-content">Закажите все и получите чехол для кота в подарок!</p>
         </div>
       </div>
     </section>
   </main>
   <footer class="page-footer">
-    <section class="contacts">
-      <h2 class="contacts__heading">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    <section class="contacts container">
+      <h2 class="contacts__heading">Приглашаем <br> к сотрудничеству дилеров!</h2>
+      <p class="contacts__text text-content">ул. Большая<br> Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <section class="map">
       <h2 class="visually-hidden">Карта</h2>
       <img src="https://via.placeholder.com/320x362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
     </section>
-    <div class="page-footer__wrapper">
-      <div class="page-footer__logo">
+    <div class="page-footer__wrapper container">
+      <a class="page-footer__logo">
         <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Интернет магазин «Кэт энерджи»">
-      </div>
+      </a>
       <section class="social">
         <h2 class="visually-hidden">Давайте дружить!</h2>
         <ul class="social__list list">
@@ -276,13 +276,18 @@
       </section>
       <section class="copyright">
         <h2 class="visually-hidden">Разработано</h2>
-        <a class="copyright__button" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
-          <span>HTML Academy</span>
-          <img src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логотип HTML Academy">
+        <a class="copyright__button button-text text-content" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          HTML Academy
+        </a>
+        <a class="copyright__button button-icon" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" fill="#666666"/>
+          </svg>
         </a>
       </section>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
