--- a/source/index.html
+++ b/source/index.html
@@ -42,12 +42,12 @@
       <button class="presentation__button button" type="button">Подобрать программу</button>
       <ul class="presentation__list list container">
         <li class="presentation__item">
-          <h2 class="presentation__item__heading">Похудение</h2>
+          <h2 class="presentation__item__heading presentation-icon">Похудение</h2>
           <p class="presentation__text text-content">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
           <a class="presentation__link" href="#">Каталог slim</a>
         </li>
         <li class="presentation__item">
-          <h2 class="presentation__item__heading">Набор массы</h2>
+          <h2 class="presentation__item__heading presentation-icon-two">Набор массы</h2>
           <p class="presentation__text text-content">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
           <a class="presentation__link" href="#">Каталог pro</a>
         </li>
@@ -57,16 +57,16 @@
       <h2 class="features__heading">Как это работает</h2>
       <ul class="features__list list">
         <li class="features__item">
-          <p class="features__text text-content">Функциональное питание содержит только полезные питательные вещества.</p>
+          <p class="features__text text-content features__icon-one">Функциональное питание содержит только полезные питательные вещества.</p>
         </li>
         <li class="features__item">
-          <p class="features__text text-content">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          <p class="features__text text-content features__icon-two">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
         </li>
         <li class="features__item">
-          <p class="features__text text-content">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          <p class="features__text text-content features__icon-three">Замените один-два приема обычной еды на наше функциональное питание.</p>
         </li>
         <li class="features__item">
-          <p class="features__text text-content">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          <p class="features__text text-content features__icon-four">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
