--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
     <a class="page-header__logo-second" href="index.html">
       <img src="img/logo_two.svg" width="101" height="18" alt="Интернет магазин «Кэт энерджи»">
     </a>
-    <nav class="main-navigation main-navigation--open main-navigation--nojs">
+    <nav class="main-navigation main-navigation--opened main-navigation--nojs">
       <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <ul class="main-navigation__list list">
         <li class="main-navigation__item desktop-no-index">
@@ -137,7 +137,7 @@
           </p>
           <p class="form__option contacts-option">
             <label class="form__option-title" for="tel">Телефон:*</label>
-            <input class="form__option-field" type="tel" name="contact" id="tel" value="8 (960) 900-60-90" pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="18" maxlength="18" required>
+            <input class="form__option-field" type="tel" name="contact" id="tel" value="8 (960) 900-60-90" pattern="\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="17" maxlength="17" required>
             <svg class="icon_phone" width="20" height="21">
               <use xlink:href="#icon-phone"></use>
             </svg>
@@ -169,7 +169,7 @@
           </p>
         </div>
       </div>
-      <button class="form__button button" type="button">Отправить заявку</button>
+      <button class="form__button button" type="submit">Отправить заявку</button>
       <p class="form__required text-content">* — Обязательные поля</p>
     </form>
   </main>
@@ -192,7 +192,7 @@
       <iframe class="map__place" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1610883157987!5m2!1sru!2sru" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
     <div class="page-footer__wrapper container">
-      <a class="page-footer__logo">
+      <a class="page-footer__logo" href="index.html">
         <svg class="footer-logo" role="img" aria-label="Интернет магазин «Кэт энерджи»" width="128" height="24">
           <use xlink:href="#footer-logo"></use>
         </svg>
