--- a/source/catalog.html
+++ b/source/catalog.html
@@ -104,7 +104,7 @@
               <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -133,7 +133,7 @@
               <td class="table-cell-two">1000 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -162,7 +162,7 @@
               <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -191,7 +191,7 @@
               <td class="table-cell-two">1000 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -220,7 +220,7 @@
               <td class="table-cell-two">400 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -249,7 +249,7 @@
               <td class="table-cell-two">700 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item">
           <a class="catalog-link" href="#">
@@ -278,12 +278,12 @@
               <td class="table-cell-two">500 Р.</td>
             </tr>
           </table>
-          <a class="catalog-item-button button" href="#">Заказать</a>
+          <a class="catalog-item-button button" href="order.html">Заказать</a>
         </li>
         <li class="catalog__item plus-item">
           <h2 class="catalog-item-title plus-title">Показать еще 100500 товаров</h2>
           <p class="plus-text text-content">На самом деле вкусов гораздо больше!</p>
-          <a class="plus-button" href="#">Показать все</a>
+          <a class="plus-button" href="new-catalog.html">Показать все</a>
         </li>
       </ul>
     </section>
